--- a/seir-forecast/Dockerfile
+++ b/seir-forecast/Dockerfile
@@ -10,7 +10,7 @@ FROM python:3.8-slim-buster
 
 RUN apt-get update 
 #RUN apt-get install -y build-essential libxml2-dev libcurl4-openssl-dev libssl-dev
-RUN r-base
+RUN apt-get install -y r-base
 RUN apt-get install -y \
 	r-cran-rstan \
 	r-cran-lubridate r-cran-dplyr r-cran-matrixstats r-cran-scales r-cran-gridextra \
@@ -20,40 +20,57 @@ RUN apt-get install -y \
 	fonts-arkpandora \
 	fonts-adf-verana
 
-RUN apt-get install -y r-cran-ggpubr
+# failed here 
+# RUN apt-get install -y r-cran-ggpubr
+# testing this ..
+RUN Rscript -e "install.packages('ggpubr', dependencies=TRUE)"
+
 RUN apt-get install -y r-cran-nortest
-RUN apt-get install -y r-cran-cowplot
+
+# RUN apt-get install -y r-cran-cowplot
+RUN Rscript -e "install.packages('cowplot', dependencies=TRUE)"
+
 RUN apt-get install -y r-cran-bh
+
+# failed here -> "install2.r: not found"
+# RUN install2.r --error --deps FALSE \
+# 	EnvStats BH ggplot2 isoband \
+#	&& rm -rf /tmp/downloaded_packages/ /tmp/*.rds
+
+RUN Rscript -e "install.packages(c('EnvStats', 'BH', 'ggplot2', 'isoband'), dependencies=FALSE)"
+RUN rm -rf /tmp/downloaded_packages/ /tmp/*.rds
 
 RUN Rscript -e "update.packages(.libPaths()[1])"
 
-RUN install2.r --error --deps FALSE \
-	EnvStats BH ggplot2 isoband \
-	&& rm -rf /tmp/downloaded_packages/ /tmp/*.rds
-
-WORKDIR /covid19-notebooks/bayes-by-county/
+# WORKDIR /covid19-notebooks/bayes-by-county/
 
 # is this redundant?
-COPY modelInput modelInput/
-COPY stan stan/
-COPY r r/
-COPY py py/
-COPY run.sh run.sh
+# failed here
+
+# RUN pwd
+# RUN ls
+# RUN ls /
+
+COPY /covid19-notebooks/bayes-by-county/modelInput /covid19-notebooks/bayes-by-county/modelInput/
+COPY /covid19-notebooks/bayes-by-county/stan /covid19-notebooks/bayes-by-county/stan/
+COPY /covid19-notebooks/bayes-by-county/r /covid19-notebooks/bayes-by-county/r/
+COPY /covid19-notebooks/bayes-by-county/py /covid19-notebooks/bayes-by-county/py/
+COPY /covid19-notebooks/bayes-by-county/run.sh /covid19-notebooks/bayes-by-county/run.sh
 
 # probably not necessary
-WORKDIR /
+# WORKDIR /
 
 ########
 ########
 
 RUN pip3 install --upgrade pip==20.0.*
 RUN pip3 install awscli==1.18.*
-WORKDIR /seir-forecast
+# WORKDIR /seir-forecast
 
-COPY ./requirements.txt /seir-forecast/requirements.txt
-RUN pip3 install -r requirements.txt
+COPY /seir-forecast/requirements.txt /seir-forecast/requirements.txt
+RUN pip3 install -r /seir-forecast/requirements.txt
 
-COPY ./seir-forecast.ipynb /seir-forecast/seir-forecast.ipynb
-COPY ./run_seir_forecast.sh /seir-forecast/run_seir_forecast.sh
+COPY /seir-forecast/seir-forecast.ipynb /seir-forecast/seir-forecast.ipynb
+COPY /seir-forecast/run_seir_forecast.sh /seir-forecast/run_seir_forecast.sh
 
 CMD [ "bash", "/seir-forecast/run_seir_forecast.sh" ]
